--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!-- Font awesome icon (links) -->
     <link rel="stylesheet" href="fontAwesome_files/fontawesome.css" />
     <script src="fontAwesome_files/fontawesome.js"></script>
+    <!-- Google fonts (link) -->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <title>Swinging with the CyberSaints Fundraiser</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -27,7 +29,7 @@
         <nav id="nav">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">Fundraiser</a></li>
                 <li><a href="#">Register</a></li>
                 <li><a href="#">Sponsorships</a></li>
                 <li><a href="#">Our Sponsors</a></li>
@@ -41,11 +43,21 @@
     </a> -->
 </div>
 
-<div class="header-text">
-    <p>First Annual</p>
-    <h1>Swinging with the CyberSaints Fundraiser</h1>
-</div>
-
+<header>
+    <div class="header-text">
+        <h1>Welcome to the Official Home Page of the CyberSaints!</h1>
+        <div class="wrapper">
+            <p>The CyberSaints is a student-led cybersecurity organization that is driven to develop and enhance the skills of its members in various areas within information technology. These areas include, but are not limited to, networking, database design, programming, malware analysis, system design, and computer hardware.</p>
+        </div>
+        <div class="wrapper">
+            <p>For information regaurding the 2023 Top Golf Fundraiser click the button below.</p>
+            <img src="images/golfer.PNG" alt="golfer" class="golfer">
+            <button type="button" class="button">
+                <span class="button__text">Click Here</span>
+            </button>
+        </div>
+    </div>
+</header>
 
 </body>
 </html>
