Home page complete!

--- a/index.html
+++ b/index.html
@@ -37,10 +37,6 @@
             </ul>
         </nav>
     </div>
-    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-    <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-    </a> -->
 </div>
 
 <header>
@@ -49,12 +45,16 @@
         <div class="wrapper">
             <p>The CyberSaints is a student-led cybersecurity organization that is driven to develop and enhance the skills of its members in various areas within information technology. These areas include, but are not limited to, networking, database design, programming, malware analysis, system design, and computer hardware.</p>
         </div>
-        <div class="wrapper">
-            <p>For information regaurding the 2023 Top Golf Fundraiser click the button below.</p>
-            <img src="images/golfer.PNG" alt="golfer" class="golfer">
-            <button type="button" class="button">
-                <span class="button__text">Click Here</span>
-            </button>
+        <div class="wrapper" id="bottom-wrapper">
+            <p id="tg-text">Information regarding the 2023 Top Golf Fundraiser!</p>
+            <div class="wrapper2">
+                <img src="images/golfer.PNG" alt="golfer" class="golfer">
+                <a href="fundraiser.html">
+                <button type="button" class="button">
+                    <span class="button__text">Click Here</span>
+                </button>
+                </a>
+            </div>
         </div>
     </div>
 </header>
