added all webpages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav id="nav">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Fundraiser</a></li>
+                <li><a href="fundraiser.html">Fundraiser</a></li>
                 <li><a href="#">Register</a></li>
                 <li><a href="#">Sponsorships</a></li>
                 <li><a href="#">Our Sponsors</a></li>
